Use binary search from nsTextFrame to find the length of the header/footer strings Bug 139384  r=dcone sr=attinasi